# rst-WYSIWYG-editor

./: .gitattributes  .gitignore  PLAN.md  README.md  start.ps1
backend/: pyproject.toml
backend/src/app/: build.py  config.py  deps.py  main.py
backend/src/app/routers/: assets.py  build.py  docs.py  files.py  git.py  pages.py  preview.py  project.py  toc.py
backend/src/rstkit/: __init__.py  assemble.py  cli.py  gitio.py  images.py  importer.py  inline.py  model.py  pages.py  parse.py  pmbridge.py  pmserialize.py  preview.py  serialize.py  store.py  subst.py  tables.py  toc.py  verify.py
backend/tests/: test_api.py  test_build.py  test_corpus_fixtures.py  test_fuzz.py  test_git_and_pages.py  test_image_edit.py  test_import.py  test_inline.py  test_insert_block.py  test_preview.py  test_roundtrip.py  test_save.py  test_spa.py  test_table_options.py  test_tables.py  test_toc.py  test_upload.py
backend/tests/fixtures/corpus/pradis-sphinx-doc/: index.rst
backend/tests/fixtures/corpus/pradis-sphinx-doc/doc_example/: index_ru.rst
backend/tests/fixtures/corpus/pradis-sphinx-doc/doc_manual/: index_ru.rst
backend/tests/fixtures/corpus/pradis-sphinx-doc/doc_pradis/: 1_overview.rst
backend/tests/fixtures/corpus/pradis-sphinx-doc/doc_sprav/errors/: errors.rst
backend/tests/fixtures/corpus/pradis-sphinx-doc/doc_sprav/math_methods/: methods_of_pradis.rst
backend/tests/fixtures/corpus/pradis-sphinx-doc/doc_sprav/preprocessor/: preprocessor.rst
backend/tests/fixtures/corpus/pradis-sphinx-doc/doc_technical_facilities/: index_ru.rst
frontend/: index.html  (+3 more)
(+66 files in other folders)
