[project]
name = "rstkit"
version = "0.1.0"
description = "rst round-trip engine and backend for the semi-WYSIWYG Sphinx editor"
requires-python = ">=3.11"
dependencies = [
    "docutils==0.21.2",
    "pydantic>=2.7",
]

[project.scripts]
rstkit = "rstkit.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rstkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
